@@ -2,6 +2,7 @@
 - kill security level step (only reachable from summary now)
 - restore progress bar when formatting ext3
 - summary screen:
+  o warn if the security level will prevent accessig windows partitions
   o reorder steps according to specs
   o render titles in bold
 
